# school-of-solana-ackee

./: COMMON_ISSUES.md  README.md
1.lesson/hello-solana/: Anchor.toml  README
1.lesson/hello-solana/tests/: hello-solana.ts
2.lesson/task2-ERoydev/src/: calculator.rs  main.rs  shapes.rs
3. Programming Model 1/calculator/: Anchor.toml
3. Programming Model 1/calculator/tests/: calculator.ts
3. Programming Model 1/task-on-chain-calculator/: Anchor.toml
3. Programming Model 1/task3-ERoydev/: package-lock.json
4. Programmin Model 2/program-a/: Anchor.toml
4. Programmin Model 2/program-a/programs/program-a/: Cargo.toml
4. Programmin Model 2/program-a/programs/program-a/src/: lib.rs
4. Programmin Model 2/solanapdas/: Anchor.toml
4. Programmin Model 2/task4-ERoydev/: package-lock.json
5. Errors/solana-errors-lecture-5/: Anchor.toml
Bonus-Tokens/spl-escrow/: Anchor.toml  README.md  package-lock.json
Bonus-Tokens/spl-escrow/tests/: spl-escrow.ts
Bonus-Tokens/token-example/: Anchor.toml
Bonus-Tokens/transfer-hooks/: Anchor.toml  package-lock.json  package.json  receiver.json  wallet.json
Bonus-Tokens/transfer-hooks/programs/simple-hook/: Cargo.toml
Bonus-Tokens/transfer-hooks/programs/simple-hook/src/: lib.rs
calculator/: emil.json
calculator/tests/: calculator.ts
hello-solana/tests/: hello-solana.ts
my_projects/ticket-app/: README.md  package-lock.json  package.json
pinocchio/: README.md
pinocchio/no_std-solandy/: Cargo.toml  me.json  to.json
pinocchio/vault/: Cargo.toml
solanapdas/: readme.md
solanapdas/tests/: solanapdas.ts
(+84 files in other folders)
