[package]
name = "program-a"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_a"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
program-b = {path="../program-b", features = ["cpi"]} # E specify this path to program B so i can use it as a Type in the context
solana-system-interface = "1.0.0"
